--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-    
+    <div id="gameboard"></div>
 
-
+    <p id="info"></p>
 
     <script src="app.js"></script>
 </body>
