--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-    <div id="gameboard"></div>
+    <div id="gameBoard"></div>
 
     <p id="info"></p>
 
