--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <p id="info"></p>
 
+    <button id="restart" onclick="restart()">RESTART GAME</button>
+
     <script src="app.js"></script>
 </body>
 </html>
